# team-project-2014

./: .gitignore  CMakeLists.txt  README.md
assets/: config.ini
assets/animations/: fireSpell.anim  iceSpell.anim  knight.anim  knight.coll  player.anim  player.coll  windSpell.anim
assets/levels/: level0.dec  level0.ent  level1.ent
cmake/Modules/: CopyDistDlls.cmake
include/EngineApp/: EngineApp.h  FrameContext.h  FrameListener.h  SceneStack.h  WindowContext.h
include/EngineSystem/Assets/: AssetsManager.h
include/EngineSystem/Config/: Config.h
include/EngineSystem/Entity/: BaseEntity.h  EntityManager.h  Message.h  MessageDispatcher.h  State.h  StateMachine.h
include/EngineSystem/Input/: AxisInput.h  BinaryInput.h  Context.h  Input.h  InputHandler.h  Translation.h
include/EngineSystem/Log/: Log.h
include/EngineSystem/Physics/: Circle.h  LinearFunction.h  Physics.h  Point.h  Rectangle.h
include/EngineSystem/Sound/: SoundManager.h
include/EngineSystem/Video/Render/: AnimatedSprite.h  Animation.h  Sprite.h
include/Game/AI/: BaseAI.h  States.h  ZombieAI.h
include/Game/Entity/: AnimationLoader.h  Door.h  EntityDispatcher.h
include/Game/Entity/CharacterEntity/: CharacterEntity.h  States.h
include/Game/Entity/CharacterEntity/States/Movement/: Fall.h  Fire.h  Global.h  Idle.h  InAir.h  Jump.h  OnGround.h  Run.h  Slash.h
include/Game/Entity/Spells/: SpellEntity.h  SpellSource.h
include/Game/HUD/: HUD.h
include/Game/Level/: Decoration.h  Level.h  LevelManager.h  Tile.h
include/Game/Menu/: List.h  ListItem.h
include/Game/Scene/: Gameplay.h  Intro.h  MainMenu.h
include/GameSystem/Level/: Decoration.h  Level.h  Tile.h
src/: EngineApp.cpp  EngineApp.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  LibrariesManager.cpp  LibrariesManager.h  LogicManager.cpp  LogicManager.h  PhysicsManager.cpp  PhysicsManager.h  RenderingManager.cpp  RenderingManager.h  WindowContext.cpp  main.cpp
src/EngineApp/: EngineApp.cpp  FrameContext.cpp  FrameListener.cpp  SceneStack.cpp  WindowContext.cpp  main.cpp
src/EngineSystem/Assets/: AssetsManager.cpp
src/EngineSystem/Config/: Config.cpp
src/EngineSystem/Entity/: BaseEntity.cpp  EntityManager.cpp  Message.cpp  MessageDispatcher.cpp
src/EngineSystem/Input/: AxisInput.cpp  BinaryInput.cpp  Context.cpp  Input.cpp  InputHandler.cpp
src/EngineSystem/Log/: Log.cpp
src/EngineSystem/Physics/: Circle.cpp  LinearFunction.cpp  Physics.cpp  Point.cpp  Rectangle.cpp
src/EngineSystem/Sound/: SoundManager.cpp
src/EngineSystem/Video/Render/: AnimatedSprite.cpp  Animation.cpp  Sprite.cpp
src/Game/: main.cpp
src/Game/AI/: BaseAI.cpp  ZombieAI.cpp
src/Game/Entity/: AnimationLoader.cpp  Door.cpp  EntityDispatcher.cpp
src/Game/Entity/CharacterEntity/: CharacterEntity.cpp
src/Game/Entity/CharacterEntity/States/Movement/: Fall.cpp  Fire.cpp  Global.cpp  Idle.cpp  InAir.cpp  Jump.cpp  OnGround.cpp  Run.cpp  Slash.cpp
src/Game/Entity/Spells/: SpellEntity.cpp  SpellSource.cpp
src/Game/HUD/: HUD.cpp
src/Game/Level/: Decoration.cpp  Level.cpp  LevelManager.cpp  Tile.cpp
src/Game/Menu/: List.cpp  ListItem.cpp
src/Game/Scene/: Gameplay.cpp  Intro.cpp  MainMenu.cpp
src/Game/Scene/Helpers/: CreateKnightAnimation.cpp  CreatePlayerAnimation.cpp
src/GameSystem/Level/: Tile.cpp
src/Rendering/: Window.cpp  Window.h
test/examples/: CMakeLists.txt  add_example.cmake
test/examples/assetsManager/: main.cpp
test/examples/entity/: Animation.cpp  Animation.h  PlayerEntity.cpp  PlayerEntity.h  PlayerStates.cpp  PlayerStates.h  main.cpp
test/examples/example/: main.cpp  util.cpp  util.h
test/examples/input/: main.cpp
test/examples/paralaxClouds/: Scene.cpp  Scene.h  main.cpp
test/examples/playerEntity/: CreateAnimation.cpp  CreatePlayerAnimation.cpp  GameplayScene.cpp  GameplayScene.h  PlayerEntity.cpp  PlayerEntity.h  States.h  main.cpp
test/examples/playerEntity/states/: AirSlash.cpp  AirSlash.h  Cast.cpp  Cast.h  Fall.cpp  Fall.h  Hurt.h  Idle.cpp  Idle.h  InAir.cpp  InAir.h  Jump.cpp  Jump.h  OnGround.cpp  OnGround.h  PlayerGlobal.h  Run.cpp  Run.h  Slash.cpp  Slash.h
test/examples/sprite/: main.cpp
